# sqrt-optimizooooooor

./: .gitignore  README.md  notes.txt
python/: SquareRoot.py  newtonsmethod.py  newtonsqrt.txt  notes.txt  sqrt  sqrt.cpp  sqrt.py  sqrt.rs  sqrt_binary  sqrt_binary.rs  sqrt_binary.txt  sqrt_binary3.txt  sqrt_binary_lengths.txt
rust/: Cargo.toml  determinism.txt  determinism_v.txt  determinism_v2.txt  determinism_v4.txt  guess_test  guess_test.rs  guessing_methods.rs  helpers.rs  msb_full_test.rs  msb_test  msb_test.rs  no_guess.txt  no_guess_b.txt  sqrt.rs  sqrt_binary  sqrt_binary.rs  sqrt_guess.rs  testing_dif_msb.txt
rust/src/: babyloniansqrt.txt  binary_of_u256.rs  guess_test.rs  guessing_methods.rs  helpers.rs  is_quad_conv_deterministic.rs  main.rs  msb_full_test  msb_full_test.rs  msb_test.txt  no_guess.txt  no_guess_test.rs  quad_conv_b.rs  quad_conv_proof.rs  quad_conv_wo_guess.txt  quadratically_convergence.rs  sqrt  sqrt.rs  sqrt_guess.rs  test_u256.rs  testtest.rs
sol/cache/: solidity-files-cache.json
sol/src/: Huffsqrt.huff  OZHuffsqrt.huff  OZsqrt.sol  Yulsqrt.sol  paraphrasedOZsqrt.sol
