[package]
name = "sqrt-optimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.17.0"
csv = "1.1"

[[bin]]
name = "quad"
path = "./src/quadratically_convergence.rs"

[[bin]]
name = "test"
path = "./src/no_guess_test.rs"

[[bin]]
name =  "test2"
path = "./src/quad_conv_b.rs"